--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <a href="#">Tips and tricks!</a>
     </div>
     </div>
-    <a href="Sources.html">Sources</a>
+    <a href="Sources.html" target="_blank">Sources</a>
     </div>
 
     <h1 style="margin-top: 5%;"> HTML Coding Crash Course </h1>
