finished with div, gonna start the text deco nd

--- a/Step_1.html
+++ b/Step_1.html
@@ -558,7 +558,7 @@
           Next, in the opening tag include the href attribute. Inside the href attribute, include this <a href="https://www.apple.com">link</a>. Next, close off the tag and after the opening tag type in Apple. Finally, add
           an a element closing tag and you're done!. Your code should look like this:
           <br>
-          <img src="Images/a element 1st example.png" alt="<a> element 1st example">
+          <img src="Images/a element 1st example.png" alt="&lt;a&gt; element 1st example">
           <br>
           If you take a look at your website, the word "Apple" should be underline and highlighted in blue. If you click on the link it should open up the link in the same tab as the practise website. 
           That could cause an inconvenience, because the user would lose their progress in the website and could lose track of where they were. In order to solve that, we would have to make the link open 
@@ -574,19 +574,30 @@
 
       <a name="div_section"></a>
       <div class="div_section">
-        <h3 style="margin-bottom: 3%;"></h3>
+        <h3 style="margin-bottom: 3%;">The div element</h3>
         <p>The div element can be used to divide parts of your website from each other, so it is easier to organise them and give them different properties. 
           You can put any type of elements within the div tag, because it is only a container for the elements. In addition, browser will always but a single line break after 
           a closing div tag, so the contents of your website aren't mashed up together. Let's try and use this element in our practice website. 
           <br><br>
           Above the what's an iPad header, type in a div opening tag. Then below the second paragraph under the heading, include a closing div tag. 
-          Next, in the div opening tag, include a class attribute and a display attribute. Set the value of the class attribute to a name, something like "whats_an_ipad_info" 
-          and set the value of the display attribute to block. This value would allow the content of the container to take 100% of the width by default and doesn't allow anything to go 
+          Next, in the div opening tag, include a class attribute and a style attribute. Set the value of the class attribute to a name, something like "whats_an_ipad_info" 
+          and set the value of the style attribute to <code>display: block;</code>. This value would allow the content of the container to take 100% of the width by default and doesn't allow anything to go 
           to the left of the right of the content. We will take advantage of the class attribute when we learn how to use css code. Your code should look like this:
           <br><br>
-          <img src="" alt="example of div element code">  
-
+          <img src="Images/div example 1.png" alt="example of div element code">
+          <br>
+          Congrats! You have completed the div course in the beginner course. Next you will be learning how to add special text effecfs such as bold an italic in your website.
         </p>
       </div>
+
+      <a name="text_deco">
+        <div class="text_deco">
+          <h3 style="margin-bottom: 3%;">Text decoration</h3>
+          <p>
+            
+          </p>
+
+        </div>
+      </a>
     </body>
 </html>
