starting the text decoration stuff

--- a/Step_1.html
+++ b/Step_1.html
@@ -592,9 +592,16 @@
 
       <a name="text_deco">
         <div class="text_deco">
-          <h3 style="margin-bottom: 3%;">Text decoration</h3>
+          <h3 style="margin-bottom: 3%;">Text formatting</h3>
           <p>
-            
+            You can use text formatting to add special meaning to your text, such as bold, italic and underlined. 
+            <br><br>
+            In order to write a text in bold, you would have to surround your target text with <code>&lt;b&gt; and &lt;/b&gt;</code> tags. 
+            <br>
+            Let's try that out in our practise webiste. Under the heading "What's an iPad" there are 2 paragraphs. At the beginning of the second paragraph, put 
+            an opening b tag and at the end put a closing b tag. This will make the second paragraph bold. Your code should look something like this:
+            <br>
+            <img src=""
           </p>
 
         </div>
