--- a/Website Completed example.html
+++ b/Website Completed example.html
@@ -10,7 +10,11 @@
 <h2>What's an iPad?</h2>
 <p>The iPad is a tablet computer developed by <a href="https://www.apple.com" target="_blank">Apple</a>. It is smaller than a typical laptop, but significantly larger than the average smartphone. The iPad does not include a keyboard or a trackpad,but instead has a touchscreen interface, which is used to control the device.
 <br></br>
-The iPad came with apps capable of handling many of our routine tasks.These include a web browser, a mail client, a calendar, an alarm clock, a maps package, a notepad, a video conferencing app, and a contacts list. It also includes tablet-specific apps, such as a camera, a photo app, a video library, and an app for playing music.</p>
+<b>
+The iPad came with apps capable of handling many of our routine tasks.These include a web browser, a mail client, a calendar, 
+an alarm clock, a maps package, a notepad, a video conferencing app, and a contacts list. It also includes tablet-specific apps, 
+such as a camera, a photo app, a video library, and an app for playing music.</p>
+</b>
 </div>
 <h2>When was it created?</h2>
 <h2>Was it successful?</h2>
