--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
     </div>
     </div>
     <a href="Sources.html" target="_blank">Sources</a>
+    <button class="Light-mode" onclick="myFunction()">Toggle dark/light mode</button>
+            <script>
+              function myFunction() {
+              var element = document.body;
+              element.classList.toggle("light-mode");
+              }
+            </script>
     </div>
 
     <h1 style="margin-top: 5%;"> HTML Coding Crash Course </h1>
