--- a/Step_1.html
+++ b/Step_1.html
@@ -46,16 +46,8 @@
             <a href="#images">Images</a>
             <a href="#buttons_info">Buttons</a>
             <a href="#anchor">The anchor element</a>
-            <a href="#text_deco">Text formatting</a>
           </div>
         </div>
-        <button class="Light-mode" onclick="myFunction()">Toggle dark/light mode</button>
-            <script>
-              function myFunction() {
-              var element = document.body;
-              element.classList.toggle("light-mode");
-              }
-            </script>
       </div>
       </div>
 
@@ -70,7 +62,7 @@
       <a name="code_parts"></a>
       <div class="HTMLcode_parts">
         <h3 style="margin-bottom:3%;">Parts of HTML code</h3>
-        <img src="Images/HTML_Anatomy.png" alt="Main parts of HTML code" width="40%" height="auto">
+        <img src="https://github.com/veryniceperson/veryniceperson.github.io/blob/master/Images/HTML_Anatomy.png?raw=true" alt="Main parts of HTML code" width="40%" height="auto">
         <p> In the image to the right you would be able to see a diagram that represents
           the parts of a single element. The <b> element </b> is a part of code in HTML which
           consists of an HTML tag, the content inside and sometimes some styling.
@@ -107,7 +99,7 @@
       <a name="HTMLhierarchy"></a>
       <div class="HTML_hierarchy">
         <h3 style="margin-bottom:3%;">HTML Hierarchy<i> (HTML code structuring) </i> </h3>
-        <img src="Images/HTML Hierarchy.png" alt='HTML Hierarchy exampls' width="100%" height="auto">
+        <img src="https://raw.githubusercontent.com/veryniceperson/veryniceperson.github.io/master/Images/HTML%20Hierarchy.png" alt='HTML Hierarchy exampls' width="100%" height="auto">
         <p> In the image above you would be able to see how HTML hierarchy works. It starts with parent, then goes on
           with children, siblings, grandchildren and so on. It is important to understand HTML Hierarchy because the
           decendants of different elements can inherit properties such as text colour and font from their ancestors.
@@ -125,7 +117,7 @@
           First of all we are going to need a platform on which we would be able to write our code on. You can either use your own, something
           like <a href="https://atom.io" target="_blank"> Atom</a> or <a href="https://code.visualstudio.com" target="_blank"> Visual Studio Code</a>. But if you are unable
           to do so, use a <a href="https://repl.it/languages/html" target="_blank"> Online HTML and CSS editor</a>.
-          <img src="Images/Atom.io icon.png" width="20%" height="20%">
+          <img src="https://github.com/veryniceperson/veryniceperson.github.io/blob/master/Images/Atom.io%20icon.png?raw=true" width="20%" height="20%">
           <br> </br>
           <b> Starting off on a blank page </b>
           <br>
@@ -168,8 +160,7 @@
           Finally you would need to close off your html tag. Try to do this yourself, but if you are stuck just paste <code> &lt;/html&gt; </code> after the closing body tag.
           <br> </br>
           Now that you are finished, your code should look like this:
-          <br>
-          <img src="Images/Getting Started example.png" width="100%" height="auto">
+          <img src="https://raw.githubusercontent.com/veryniceperson/veryniceperson.github.io/master/Images/Getting%20Started%20example.png" width="100%" height="auto">
           <br>
           <b> There!!! Now you have a starter template that you can use for any website you would want to make. Next we are going to learn some elements and how to use them.</b>
         </p>
@@ -178,7 +169,7 @@
       <a name="headings"></a>
       <div class="Headings">
         <h3 style="margin-bottom:3%;">Headings</h3>
-        <img src="Images/Headings Image.png" width="25%" height="25%">
+        <img src="https://raw.githubusercontent.com/veryniceperson/veryniceperson.github.io/master/Images/Headings%20Image.png" width="25%" height="25%">
         <p>In this section we will learn how to use headings in your website. Headings are useful for making your website more organised, by including things such as headings and sub-headings for sections of your website. Headings make sure that your viewers know what the
           content would be about and it makes navigating around your website much easier. The headers is also what grabs the viewer's attention, which means that you would have to add a creative heading for your website.
           <br></br>
@@ -202,7 +193,7 @@
       <a name="Paragraphs"></a>
       <div class="paragraphs">
         <h3 style="margin-bottom:3%;"> Paragraphs and Line Breaks</h3>
-        <img class="paragraphs" src="Images/Paragraph image.png" width="25%" height="25%" style="float: right; margin-left: 5%; right: 0;">
+        <img class="paragraphs" src="https://github.com/veryniceperson/veryniceperson.github.io/blob/master/Images/Paragraph%20image.png?raw=true" width="25%" height="25%" style="float: right; margin-left: 5%; right: 0;">
         <p> In this section you will learn how to use paragraphs and line breaks. in your website. Paragraphs are useful for adding information about a topic on your website. Paragraphs are usually located below the heading or sub-heading of you website.
           In order to include a paragraph in your website, you would have to include <code>&lt;p&gt;</code> as your opening tag and <code>&lt;/p&gt;</code> as your closing tag. Then, you would include your content in between of those two tags.
           In a website you would usually have to include your <code>&lt;p&gt;</code> element under a subheading.
@@ -238,7 +229,6 @@
           In order to get some practise do this: On a new line below the "What's an iPad?" subheading, copy and paste the first paragraph from <a href="Whats an iPad.html" class="paragraphs" target="_blank">this</a> in between of p tags. Then, add 2 line breaks, or
           close off this p element and start a new one 2 lines below (you need to have an empty line in between them). After that, add the second paragraph from <a href="Whats an iPad.html" class="paragraphs" target="_blank">this</a>. If you are finished, your website
           should look something like this:
-          <br>
           <img src="Images/Paragraphs end result.png" width="100%" height="auto">
           <br></br>
           <b>Good job! Next we are going to learn how to add images into your website.</b>
@@ -262,7 +252,6 @@
          Next, include the link using the src tag and remember to close off the element. 
          <br><br>
          Your website should look like this:
-         <br>
          <img src="Images/Image example 1.png" width="100%" height="auto">
          <br>
          For now, the images looks a bit too big. The size of the image by default depends on the size of the image originally. However, we can adjust this very easily.
@@ -276,7 +265,6 @@
          <br><br>
          Let's get some practise. Set the width of you image to any value, either in px and 100% and test with differnet widths, in order to know what each value does. 
          If you can't choose, set your image width to 30%. If you had chosen to set it to 30%, it should look something like this:
-         <br>
          <img src="Images/Image example 2.png" width="100%" height="auto">
          <br>
          You can see that this looks much better than the first example, because it is smaller and much more organised. 
@@ -340,7 +328,7 @@
 
             <tr>
               <td>formenctype</td>
-              <td>application/x-www-form-urlencoded <br><br> multipart/form-data <br><br> text/plain</td>
+              <td>application/x-www-form-urlencoded <br> multipart/form-data <br> text/plain</td>
               <td>This attribute specifies how data should be encoded before sending it to a server. This only works for type="submit" buttons. </td>
               <td>
                 <code>&lt;button type="submit" formenctype="application/x-www-form-urlencoded"&gt; &lt;/button&gt;</code>
@@ -353,7 +341,7 @@
 
             <tr>
               <td>formmethod</td>
-              <td>get<br><br>post</td>
+              <td>get<br>post</td>
               <td>This attribute specifies how form date inputted by the user should be sent to the server. This only works for type="submit" buttons.</td>
               <td>
                 <code>&lt;button type="submit" formmethod="get"&gt; &lt;/button&gt;</code>
@@ -373,7 +361,7 @@
 
             <tr>
               <td>formtarget</td>
-              <td>_blank <br><br> _self <br><br> _parent <br><br> _top <br><br> framename</td>
+              <td>_blank <br> _self <br> _parent <br> _top <br> framename</td>
               <td>This attribute specifies where to display the response for a user after they had submitted a form. This only works for type="submit" buttons.</td>
               <td>
                 <code>&lt;button type="submit" formtarget="_blank"&gt; &lt;/button&gt;</code>
@@ -399,7 +387,7 @@
 
             <tr>
               <td>type</td>
-              <td>button <br><br>reset <br><br>submit </td>
+              <td>button <br>reset <br>submit </td>
               <td>This attribute is used to specify the type of a button. <i>The reset button is used to reset a form, so the user can insert new data into the form</i></td>
               <td>
                 <code>&lt;button type="button"&gt; &lt;/button&gt;</code>
@@ -608,69 +596,15 @@
           <p>
             You can use text formatting to add special meaning to your text, such as bold, italic and underlined. 
             <br><br>
-            In order to write text in <b>bold</b>, you would have to surround your target text with <code>&lt;b&gt;</code> and <code>&lt;/b&gt;</code> tags. 
+            In order to write a text in bold, you would have to surround your target text with <code>&lt;b&gt; and &lt;/b&gt;</code> tags. 
             <br>
             Let's try that out in our practise webiste. Under the heading "What's an iPad" there are 2 paragraphs. At the beginning of the second paragraph, put 
             an opening b tag and at the end put a closing b tag. This will make the second paragraph bold. Your code should look something like this:
             <br>
-            <img src="Images/text formatting example 1.png" width="100%" height="auto">
-            <br>
-            And your website should look like this:
-            <br>
-            <img src="Images/text formatting website example 1.png" width="100%" height="auto">
-            <br><br>
-
-            In order to write text in <i>italic</i>, you would have to surrond your target text with <code>&lt;i&gt;</code> and <code>&lt;/i&gt;</code> tags. 
-            If you would like to see how it looks, just replace the "b" in the bold tags with "i".
-            <br><br>
-
-            In order to write <em>emphasised</em> text you would have to surround your target text with <code>&lt;em&gt;</code> and <code>&lt;/em&gt;</code> tags. 
-            Emphasised text usually appears italic in most browsers. 
-            <br>
-            If you would like to see how it looks, just replace the "i" in the italic tags with "em".
-            <br><br>
-
-            In order to outline that text is <strong>imporant</strong>, you would have to surround your target text with <code>&lt;strong&gt;</code> and <code>&lt;/strong&gt;</code>
-            tags. Text with the strong attribute usually appears bold in most browsers. 
-            <br>
-            If you would like to see how it looks, just replace the "em" in the italic tags with "strong".
-            <br><br>
-
-            In order to write <small>small</small> text you would have to surround your target text with <code>&lt;small&gt;</code> and <code>&lt;/small&gt;</code> tags. 
-            Small text will be smaller than the text that it is nested in, no matter the size of the test that it is nested in. 
-            <br>
-            If you would like to see how it looks, just replace the "strong" in the italic tags with "small".
-            <br><br>
-
-            In order to write <mark>highlighted</mark> text you would have to surround your target text with <code>&lt;mark&gt;</code> and <code>&lt;/mark&gt;</code> tags. 
-            Marked text will appear highlighted or marked in some way.
-            <br>
-            If you would like to see how it looks, just replace the "small" in the italic tags with "mark".
-            <br><br>
-
-            In order to write <sub>subscript</sub> text you would have to surround your target text with <code>&lt;sub&gt;</code> and <code>&lt;/sub&gt;</code> tags. 
-            Subscript text is useful for writing chemical equations, like CO<sub>2</sub>.
-            <br>
-            If you would like to see how it looks, just replace the "mark" in the italic tags with "sub".
-            <br><br>
-
-            In order to write <sup>superscript</sup> text you would have to surround your target text with <code>&lt;sup&gt;</code> and <code>&lt;/sup&gt;</code> tags. 
-            Superscript text is useful for writing mathematical equations, like <i>x</i><sup>2</sup>
-            <br>
-            If you would like to see how it looks, just replace the "sub" in the italic tags with "sup".
-            <br><br>
-
-            Great progress! These are common text formatting options you can use in order to elevate your website to a higher quality level. Next we will be learning how to include videos 
-            in websites using HTML.
+            <img src=""
           </p>
-        </div>
-      </a>
-
-      <a name="videos">
-        <div class="videos">
 
         </div>
-
       </a>
     </body>
 </html>
