--- a/Website Completed example.html
+++ b/Website Completed example.html
@@ -13,9 +13,8 @@
 <b>
 The iPad came with apps capable of handling many of our routine tasks.These include a web browser, a mail client, a calendar, 
 an alarm clock, a maps package, a notepad, a video conferencing app, and a contacts list. It also includes tablet-specific apps, 
-such as a camera, a photo app, a video library, and an app for playing music.
+such as a camera, a photo app, a video library, and an app for playing music.</p>
 </b>
-</p>
 </div>
 <h2>When was it created?</h2>
 <h2>Was it successful?</h2>
