finally finished with light/dark mode, starting the video part

--- a/Sources.html
+++ b/Sources.html
@@ -24,6 +24,14 @@
       <a href="#">Tips and tricks!</a>
     </div>
     </div>
+    <button class="Light-mode" onclick="myFunction()">Toggle dark/light mode</button>
+
+          <script>
+            function myFunction() {
+            var element = document.body;
+            element.classList.toggle("light-mode");
+          }
+          </script>
     </div>
 
     <h1 style="margin-top: 5%;"> These are the sources of somethings I have used for the website. They include
