almost finished with the scrollbar

--- a/Step_1.html
+++ b/Step_1.html
@@ -11,7 +11,11 @@
     </a>
   </head>
 
+  <section>
     <body>
+      <div id="progressbar"></div>
+      <div id="scrollpath"></div>
+      <div id="percent"></div>
       <div class="navbar">
       <div class="dropdown">
         <button class="dropbtn"> Courses
@@ -670,5 +674,18 @@
           <h3 style="margin-bottom: 3%;">Videos</h3>
         </div>
       </a>
+
+    <script type="text/javascript">    
+        var percent = document.getElementById("progressbar");
+        var percent = document.getElementById("percent");
+
+        var totalHeight = document.body.scrollHeight - window.innerHeight;
+        window.onscroll = function(){
+          var progress = (window.pageYOffset / totalHeight) * 100;
+          progressbar.style.height = progress + "%";
+          percent.innerHTML = ""+ Math.round(progress) + "%"
+        }
+    </script>
     </body>
+  </section>
 </html>
