--- a/Step_1.html
+++ b/Step_1.html
@@ -27,7 +27,7 @@
           <a href="#">Tips and tricks!</a>
         </div>
       </div>
-      <a class="source_button" href="Sources.html target="_blank"">Sources</a>
+      <a class="source_button" href="Sources.html" target="_blank">Sources</a>
       <div class="dropdown">
         <button class="dropbtn"> Help!
           <i class="fa fa-caret-down"></i>
@@ -683,7 +683,7 @@
         window.onscroll = function(){
           var progress = (window.pageYOffset / totalHeight) * 100;
           progressbar.style.height = progress + "%";
-          percent.innerHTML = ""+ Math.round(progress) + "%"
+          percent.innerHTML =  Math.round(progress) + "%"
         }
     </script>
     </body>
