--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
 <meta name="google-site-verification" content="Ub6LLDfczY9apdDwMDdYBFD55voDA9LRDCfXZU0y0vE" />
 <meta name="HandheldFriendly" content="true">
     <title> HTML Crash Course </title>
-    <link rel="shortcut icon" href="https://raw.githubusercontent.com/veryniceperson/veryniceperson.github.io/master/Images/Website_icon.ico" />
+    <link rel="shortcut icon" href="Images/Website_icon.ico" />
     <link rel="stylesheet" href="stylesheet.css">
     <a class="homepage_shortcut" href="index.html">
       <img src="Images/Web logo.png" width="10%" height="auto">
     </a>
+
+    <script>
+      function alertUser(msg) {
+      alert(msg);
+      }
+      </script>
   </head>
 
-  <body>
+  <body onload="alertUser('IT IS RECOMMENDED THAT YOU USE THIS WEBSITE ON A COMPUTER OR TABLET IN FULLSCREEN IN ORDER TO GET THE BEST EXPERIENCE')">
     <div id="progressbar"></div>
       <div id="scrollpath"></div>
       <div id="percent"></div>
