fixing the a issue

--- a/Step_1.html
+++ b/Step_1.html
@@ -605,7 +605,7 @@
         </p>
       </div>
 
-      <a name="text_deco">
+      <a name="text_deco"></a>
         <div class="text_deco">
           <h3 style="margin-bottom: 3%;">Text formatting</h3>
           <p>
@@ -668,13 +668,20 @@
             in websites using HTML.
           </p>
         </div>
-      </a>
 
-      <a name="videos">
+      <a name="videos"></a>
         <div class="videos">
           <h3 style="margin-bottom: 3%;">Videos</h3>
+          <p>
+            We will learn how to add videos to your website in this<b> part of the course. The opening and the closing tags for videos are <code>&lt;video&gt;</code> <code>&lt;/video&gt;</code>.
+            You can add different attributes in the opening tag in order to change the behavior of the video in your website. A list about the attibutes can be found below:
+            <br>
+            <ul>
+              <li><b>Controls</b> - The controls attribute lets the user do things such as play, pause and go to different parts of a video. </li>
+              <li
+            </ul>
+          </p>
         </div>
-      </a>
 
     <script type="text/javascript">    
         var percent = document.getElementById("progressbar");
